# nemo

./: .gitignore  README.md  config.json  config.py  config.toml  config_loader.py  env_variables_loader.sh  environment.yml  pull_singularity_images.py  pyproject.toml  run_mriqc.py  run_mriqc_group.py  run_workflow.py  subjects_list.txt  utils.py
anat/: README.md  _outlierDetection.py  outlierDetection.py  qc_freesurfer.py  run_freesurfer.py  workflow_segmentation.py
config/: config.json  config.toml  config_qsiprep.toml  eddy_params.json  fmriprep_config.toml  old_config.json  qsiprep_config.toml  qsirecon_config.toml  xcp_d_vol_config.toml  xcpd_config.toml  xcpd_vol_config.toml
config_files/: __init__.py  config.toml  fmriprep_config.toml  mriqc_config.toml  old_config.json  qsirecon_config.toml  xcp_d_surf_config.toml  xcp_d_vol_config.toml
dwi/: config_qsiprep.json  config_qsiprep.toml  qc_qsiprep.py  qc_qsiprep_metrics_extractions.py  qc_qsirecon.py  qc_qsirecon_metrics_extractions.py  run_qsiprep.py  run_qsiprep.sh  run_qsiprep.slurm  run_qsirecon.py  run_qsirecon.slurm  workflow_diffusion.py
fmriprep/: compare_fs_versions.py  dataset_description.json  migration_fmriprep.py  pull_singularity_images.py  run_fmriprep_slurm.py  run_mriqc_slurm.py  run_rsfmri_workflow.py  run_workflow_rsfmri.py  run_xcpd_postproc.py  workflow_rsfmri.py
legacy/: check_log.py  config.py  gen_launch_script_fmriprep.py  plot_qc_fmriprep.py  qc_complete.py  qc_fsqc.py  run_qsirecon.slurm  ss_mriqc.sh  submit_job_mriqc.sh  workflow_segmentation.py
qc/: outlierDetection.py  (+3 more)
(+38 files in other folders)
