[project]
name = "fmriprep"
version = "0.1.0"
description = "Automated QA and comparison between fMRIPrep 23.2.0 and 25.2.0 using Singularity"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9,<3.13"

dependencies = [
    "pandas>=2.0",
    "nibabel>=5.2",
    "numpy>=1.24",
    "scipy>=1.10",
    "jsonschema>=4.0",
    "rich>=13.0",
    "tqdm>=4.65",
    "jinja2 (>=3.1.6,<4.0.0)",
]

[project.optional-dependencies]
reports = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jinja2>=3.1",
    "plotly>=5.15",
]
[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = ">=2.0"
nibabel = ">=5.2"
numpy = ">=1.24"
scipy = ">=1.10"
jsonschema = ">=4.0"
rich = ">=13.0"
tqdm = ">=4.65"

[tool.poetry.group.reports.dependencies]
matplotlib = ">=3.8"
seaborn = ">=0.13"
jinja2 = ">=3.1"
plotly = ">=5.15"

